[gd_scene load_steps=10 format=3 uid="uid://g7nhxo6dhaxt"]

[ext_resource type="Script" path="res://game_sandbox/devone_sandbox/menu/main_menu.gd" id="1_gcpvp"]
[ext_resource type="Texture2D" uid="uid://bspf4arc8ti01" path="res://game_sandbox/devone_sandbox/menu/assets/button_square_flat.png" id="2_fmfis"]
[ext_resource type="PackedScene" uid="uid://colohtmwn61ji" path="res://game_sandbox/thaddeus_sandbox/ModelTester.tscn" id="3_p1hef"]
[ext_resource type="AudioStream" uid="uid://d2fbpquxxthfi" path="res://game_sandbox/devone_sandbox/menu/assets/Creb.ogg" id="3_upwim"]
[ext_resource type="FontFile" uid="uid://c0bue0kcnh2gq" path="res://game_sandbox/jake_sandbox/Assets/Fonts/BubblegumSans-Regular.ttf" id="4_y40df"]
[ext_resource type="Texture2D" uid="uid://dr7ig7kdgd77o" path="res://game_sandbox/thaddeus_sandbox/GGJ2025TeamPhoto.jpg" id="5_em1to"]

[sub_resource type="LabelSettings" id="LabelSettings_p1wyo"]
font_size = 128
font_color = Color(3.56168e-06, 0, 0.852083, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_don7u"]
bg_color = Color(0.1, 0.1, 0.1, 0.898039)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="LabelSettings" id="LabelSettings_yg1im"]
font = ExtResource("4_y40df")
font_size = 37

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gcpvp")
scene = "main"

[node name="Bg" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fmfis")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ModelTester" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_p1hef")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "SHARK BAIT"
label_settings = SubResource("LabelSettings_p1wyo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "EXIT"

[node name="CreditsPanel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_don7u")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CreditsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.039
anchor_top = 0.106
anchor_right = 0.75
anchor_bottom = 0.958
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Adrianna Rieke - Design, Systems Programming"
label_settings = SubResource("LabelSettings_yg1im")

[node name="Label2" type="Label" parent="MarginContainer/CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Alex Yee - Programming, Design"
label_settings = SubResource("LabelSettings_yg1im")

[node name="Label3" type="Label" parent="MarginContainer/CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Devone Reynolds - Production"
label_settings = SubResource("LabelSettings_yg1im")

[node name="Label4" type="Label" parent="MarginContainer/CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "fluffy-(Music and Sound)"
label_settings = SubResource("LabelSettings_yg1im")

[node name="Label5" type="Label" parent="MarginContainer/CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Jake Fusco - Art Assets, Crunch Sound, Design"
label_settings = SubResource("LabelSettings_yg1im")

[node name="Label6" type="Label" parent="MarginContainer/CreditsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Thaddeus Psarris-Crab Visuals and Movement"
label_settings = SubResource("LabelSettings_yg1im")

[node name="Control" type="Control" parent="MarginContainer/CreditsPanel"]
layout_mode = 1
anchor_left = 0.81
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ggj2025TeamPhoto" type="Sprite2D" parent="MarginContainer/CreditsPanel/Control"]
scale = Vector2(0.285, 0.285)
texture = ExtResource("5_em1to")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_upwim")
volume_db = -24.0
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
